updates to use the updated jpms exports and new modules.  this is in a partially working state